force-app/main/default/objects/Case/fields/UMCustomer_emoticon_value__c.field-meta.xml
<CustomField>
    <fullName>UMCustomer_emoticon_value__c</fullName>
    <description>Store the emoticon as a text value.</description>
    <label>Customer emoticon value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>awesome</fullName>
            </value>
            <value>
                <fullName>happy</fullName>
            </value>
            <value>
                <fullName>neutral</fullName>
            </value>
            <value>
                <fullName>sad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>