force-app/main/default/objects/Case/fields/UMgeolocalization__c.field-meta.xml
<CustomField>
    <fullName>UMgeolocalization__c</fullName>
    <description>Store the geolocalization of the customer on case creation from mobile.</description>
    <inlineHelpText>Where the customer was when the case has been created</inlineHelpText>
    <label>Customer Geolocalization</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>