force-app/main/default/objects/Case/fields/Unread_Comment__c.field-meta.xml
<CustomField>
    <fullName>Unread_Comment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field Action : As part of the field action process, any time a portal user sends a message or posts a comment on the Field Action Case, this flag gets checked.  The case is routed via Omni-Channel to an agent for response. Additionally, a dynamic component on the Lightning case page layout shows in big bold red letters that there is a New Case Comment.</description>
    <label>Unread Comment</label>
    <type>Checkbox</type>
</CustomField>