force-app/main/default/objects/Case/fields/Urgency__c.field-meta.xml
<CustomField>
    <fullName>Urgency__c</fullName>
    <formula>IMAGE( URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( Priority, 
&quot;Critical&quot;, &quot;015Ho000004v7pG&amp;oid=&quot;&amp;$Organization.Id, 
&quot;High&quot;, &quot;015Ho000004v7pH&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Medium&quot;, &quot;015Ho000004v7pI&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Low&quot;, &quot;015Ho000004v7pJ&amp;oid=&quot;&amp;$Organization.Id, 
&quot;015Ho000004v7pJ&amp;oid=&quot;&amp;$Organization.Id),&quot;&quot;,22,22)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Urgency</label>
    <type>Text</type>
</CustomField>