force-app/main/default/objects/Case/fields/Weight_lbs__c.field-meta.xml
<CustomField>
    <fullName>Weight_lbs__c</fullName>
    <label>Weight (lbs)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>