force-app/main/default/objects/Case/recordTypes/Adverse_Event_Report.recordType-meta.xml
<RecordType>
    <fullName>Adverse_Event_Report</fullName>
    <active>true</active>
    <businessProcess>Patient Case</businessProcess>
    <description>Adverse Event Report</description>
    <label>Adverse Event Report</label>
</RecordType>