force-app/main/default/objects/Case/recordTypes/Behavioral_Health.recordType-meta.xml
<RecordType>
    <fullName>Behavioral_Health</fullName>
    <active>true</active>
    <businessProcess>Care Requests</businessProcess>
    <label>Behavioral Health</label>
</RecordType>