force-app/main/default/objects/Case/recordTypes/Benefits.recordType-meta.xml
<RecordType>
    <fullName>Benefits</fullName>
    <active>true</active>
    <businessProcess>Benefits Process</businessProcess>
    <description>Any inquiry regarding member benefits &amp; eligibility.</description>
    <label>Benefits</label>
</RecordType>