force-app/main/default/objects/Case/recordTypes/Chat_Case.recordType-meta.xml
<RecordType>
    <fullName>Chat_Case</fullName>
    <active>true</active>
    <businessProcess>Account Service</businessProcess>
    <description>Used for cases that originate from the Chat channel.</description>
    <label>Chat Case</label>
</RecordType>