force-app/main/default/objects/Case/recordTypes/DrugRequest.recordType-meta.xml
<RecordType>
    <fullName>DrugRequest</fullName>
    <active>true</active>
    <businessProcess>Care Requests</businessProcess>
    <description>Record type for prior authorization request and approval of a prescription drug.</description>
    <label>Drug Request</label>
</RecordType>