force-app/main/default/objects/Case/recordTypes/Employee.recordType-meta.xml
<RecordType>
    <fullName>Employee</fullName>
    <active>true</active>
    <businessProcess>General Question</businessProcess>
    <description>Used by the action, &quot;New_Employee_Case&quot;</description>
    <label>Employee</label>
</RecordType>