force-app/main/default/objects/Case/recordTypes/Field_Action.recordType-meta.xml
<RecordType>
    <fullName>Field_Action</fullName>
    <active>true</active>
    <businessProcess>Field Action</businessProcess>
    <description>A case is automatically created for each Account that is part of a field action - this tracks the life cycle of the notification, acknowledgement, return.</description>
    <label>Field Action</label>
</RecordType>