force-app/main/default/objects/Case/recordTypes/HLS_Payer_CareManagement.recordType-meta.xml
<RecordType>
    <fullName>HLS_Payer_CareManagement</fullName>
    <active>true</active>
    <businessProcess>Care Managment Referral</businessProcess>
    <description>Used to generate care management referrals.</description>
    <label>Care Management</label>
</RecordType>