force-app/main/default/objects/Case/recordTypes/HLS_Payer_ClaimsDispute.recordType-meta.xml
<RecordType>
    <fullName>HLS_Payer_ClaimsDispute</fullName>
    <active>true</active>
    <businessProcess>Benefits Process</businessProcess>
    <description>Dispute Claims Record Type</description>
    <label>Claims Dispute</label>
</RecordType>