force-app/main/default/objects/Case/recordTypes/HLS_Payer_LTRMemberRenewal.recordType-meta.xml
<RecordType>
    <fullName>HLS_Payer_LTRMemberRenewal</fullName>
    <active>true</active>
    <businessProcess>LTR - Member Renewal</businessProcess>
    <description>Used as part of the Late to Refill workflow when the member&apos;s plan is inactive.</description>
    <label>LTR - Member Renewal</label>
</RecordType>