force-app/main/default/objects/Case/recordTypes/HLS_Provider_ScheduleAppointment.recordType-meta.xml
<RecordType>
    <fullName>HLS_Provider_ScheduleAppointment</fullName>
    <active>true</active>
    <businessProcess>Case Appointment</businessProcess>
    <label>Schedule Appointment</label>
</RecordType>