force-app/main/default/objects/Case/recordTypes/Home_Health.recordType-meta.xml
<RecordType>
    <fullName>Home_Health</fullName>
    <active>true</active>
    <businessProcess>HealthCloudGA__Healthcare</businessProcess>
    <label>Home Health</label>
</RecordType>