force-app/main/default/objects/Case/recordTypes/Investigator_Initiated_Trial_Request.recordType-meta.xml
<RecordType>
    <fullName>Investigator_Initiated_Trial_Request</fullName>
    <active>true</active>
    <businessProcess>IITR</businessProcess>
    <description>For Life Sciences Medical Affairs use cases.</description>
    <label>Investigator Initiated Trial Request</label>
</RecordType>