force-app/main/default/objects/Case/recordTypes/Medical_Info_Request_MIR.recordType-meta.xml
<RecordType>
    <fullName>Medical_Info_Request_MIR</fullName>
    <active>true</active>
    <businessProcess>HealthCloudGA__CareGap</businessProcess>
    <description>Pharma Use Cases</description>
    <label>Medical Info Request (MIR)</label>
</RecordType>