force-app/main/default/objects/Case/recordTypes/MedicalDeviceReturn.recordType-meta.xml
<RecordType>
    <fullName>MedicalDeviceReturn</fullName>
    <active>true</active>
    <businessProcess>HealthCloudGA__Healthcare</businessProcess>
    <description>It is created to capture all the cases related to medical device returns</description>
    <label>MedicalDeviceReturn</label>
</RecordType>