force-app/main/default/objects/Case/recordTypes/SimpleIssue.recordType-meta.xml
<RecordType>
    <fullName>SimpleIssue</fullName>
    <active>true</active>
    <businessProcess>Account Service</businessProcess>
    <description>For questions regarding a customer&apos;s account information - billing, invoices, etc.</description>
    <label>Account Service</label>
</RecordType>