force-app/main/default/objects/Case/recordTypes/Social_Customer_Service.recordType-meta.xml
<RecordType>
    <fullName>Social_Customer_Service</fullName>
    <active>true</active>
    <businessProcess>Account Service</businessProcess>
    <description>For questions that originate from social channels Facebook or Twitter.</description>
    <label>Social Customer Service</label>
</RecordType>