force-app/main/default/objects/Case/recordTypes/Social_Determinants.recordType-meta.xml
<RecordType>
    <fullName>Social_Determinants</fullName>
    <active>true</active>
    <businessProcess>Social Determinants Process</businessProcess>
    <description>Used for the Kyruus Provider Match Demo</description>
    <label>Social Determinants</label>
</RecordType>