force-app/main/default/objects/Case/recordTypes/TechnicalIssueAdvanced.recordType-meta.xml
<RecordType>
    <fullName>TechnicalIssueAdvanced</fullName>
    <active>true</active>
    <businessProcess>Technical Service</businessProcess>
    <description>For questions about product capabilities or troubleshooting technical issues.</description>
    <label>Technical Service</label>
</RecordType>