force-app/main/default/objects/Case/listViews/All_Field_Action_Letters.listView-meta.xml
<ListView>
    <fullName>All_Field_Action_Letters</fullName>
    <columns>CASES.SUBJECT</columns>
    <columns>Notification_Date__c</columns>
    <columns>Hospital__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>Accepted_or_Declined__c</columns>
    <columns>Product_to_be_returned__c</columns>
    <columns>Days_Since_FA_Notification__c</columns>
    <columns>NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Field_Action</value>
    </filters>
    <filters>
        <field>My_Account_or_Contact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Field Action Letters</label>
</ListView>