force-app/main/default/objects/Case/listViews/All_IIT_Requests.listView-meta.xml
<ListView>
    <fullName>All_IIT_Requests</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>Drug__c</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Investigator_Initiated_Trial_Request</value>
    </filters>
    <label>All IIT Requests</label>
</ListView>