force-app/main/default/objects/Case/listViews/All_My_Cases.listView-meta.xml
<ListView>
    <fullName>All_My_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Status_Indicator__c</columns>
    <columns>CASES.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsCurrentUser__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All My Cases</label>
</ListView>