force-app/main/default/objects/Case/listViews/Appeals_Case.listView-meta.xml
<ListView>
    <fullName>Appeals_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Appeal,Case.Grievance</value>
    </filters>
    <filters>
        <field>IsCurrentUser__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Appeals</label>
</ListView>