force-app/main/default/objects/Case/listViews/Appointment_Scheduling.listView-meta.xml
<ListView>
    <fullName>Appointment_Scheduling</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.HLS_Provider_ScheduleAppointment</value>
    </filters>
    <label>Appointments to Confirm</label>
</ListView>