force-app/main/default/objects/Case/listViews/Appointments_Barriers.listView-meta.xml
<ListView>
    <fullName>Appointments_Barriers</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Charles Green</value>
    </filters>
    <label>Charles Green Recent Cases</label>
</ListView>