force-app/main/default/objects/Case/listViews/Assigned_Cases.listView-meta.xml
<ListView>
    <fullName>Assigned_Cases</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Risk_Score__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.HLS_Payer_CareManagement,Case.HealthCloudGA__CarePlan</value>
    </filters>
    <label>Assigned Cases</label>
</ListView>