force-app/main/default/objects/Case/listViews/Benefits_Verifications_Work_Case.listView-meta.xml
<ListView>
    <fullName>Benefits_Verifications_Work_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Benefits Verifications Work</label>
    <queue>Benefits_Verifications_Work</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>