force-app/main/default/objects/Case/listViews/Care_Mgmt_Referrals_Case.listView-meta.xml
<ListView>
    <fullName>Care_Mgmt_Referrals_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Care Mgmt Referrals</label>
    <queue>Care_Mgmt_Referrals</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>