force-app/main/default/objects/Case/listViews/Charles_Green_All_Cases.listView-meta.xml
<ListView>
    <fullName>Charles_Green_All_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CreatedDate__c</columns>
    <columns>CASES.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Charles Green</value>
    </filters>
    <label>Charles Green All Cases</label>
</ListView>