force-app/main/default/objects/Case/listViews/Charles_Scott_Recent_Cases.listView-meta.xml
<ListView>
    <fullName>Charles_Scott_Recent_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Charles Scott</value>
    </filters>
    <label>Charles Scott Recent Cases</label>
</ListView>